--- a/app/src/main/res/drawable/image_back_bacl.xml
+++ b/app/src/main/res/drawable/image_back_bacl.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#2B919C"/>
-    <corners android:radius="50dp"/>
+<gradient android:startColor="#50A7C2 "
+    android:endColor="#B7F8DB"/>
+
+<corners android:radius="50dp"/>
 </shape>
