--- a/app/src/main/res/layout/schedule_btn.xml
+++ b/app/src/main/res/layout/schedule_btn.xml
@@ -74,7 +74,7 @@
 
     </RelativeLayout>
         <Button
-            android:id="@+id/set_sched"
+            android:id="@+id/btn_set_sched"
             android:layout_marginTop="10dp"
            android:background="@drawable/border_schedule"
             android:textStyle="bold"
