--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -4,38 +4,53 @@
     android:layout_width="match_parent"
     android:padding="8dp"
     android:layout_height="wrap_content">
+    <RelativeLayout
+        android:id="@+id/rela"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/time_sent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:text="awdawd" />
+    </RelativeLayout>
 
     <RelativeLayout
-        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/rela"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/profile_image"
-            android:visibility="gone"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher"
+            android:visibility="gone" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background_right"
             android:id="@+id/show_message"
-            android:text="hello"
-            android:layout_alignParentEnd="true"
-            android:textSize="18sp"
-            android:padding="8dp"
-            android:textColor="@color/colorWhite"
-            android:layout_alignParentRight="true" />
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_seen"
-            android:layout_below="@+id/show_message"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            />
+            android:layout_alignParentRight="true"
+            android:background="@drawable/background_right"
+            android:padding="8dp"
+            android:text="hello"
+            android:textColor="@color/colorWhite"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/text_seen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/show_message"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true" />
     </RelativeLayout>
 </RelativeLayout>
