--- a/app/src/main/res/menu/mentor_activity_main_drawer.xml
+++ b/app/src/main/res/menu/mentor_activity_main_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/send_report"
             android:icon="@drawable/ic_report_problem_black_24dp"
-            android:title="@string/send_report" />
+            android:title="Report Problem" />
     </group>
 
     <item android:title="@string/account">
