--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,36 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/blur"
     android:layout_width="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="20dp"
-    android:background="@color/colorPrimary"
     android:layout_height="match_parent"
-    tools:context=".MainActivities.activities.StartActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Counseling Online"
-        android:textSize="20sp"
-        android:textColor="#fff"
-        android:textStyle="bold"/>
-    <Button
+    tools:context=".MainActivities.activities.StartActivity">
+    <RelativeLayout
+        android:background="#40000000"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:background="@color/colorPrimaryDark"
-        android:id="@+id/login"
-        android:textColor="#fff"
-        android:text="LOGIN"/>
-    <Button
-        android:background="@color/colorPrimaryDark"
-        android:layout_width="match_parent"
-        android:textColor="#fff"
-        android:layout_height="wrap_content"
-        android:id="@+id/register"
-        android:layout_marginTop="10dp"
-        android:text="Register"/>
-</LinearLayout>
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/first"
+            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RelativeLayout
+                    android:layout_marginBottom="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/logo"
+                        android:layout_width="101dp"
+                        android:layout_height="118dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/logo" />
+
+                    <TextView
+                        android:id="@+id/counseling"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="50dp"
+                        android:layout_toRightOf="@+id/logo"
+                        android:fontFamily="sans-serif-condensed-light"
+                        android:text="Counseling"
+                        android:textColor="#F59404"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/counseling"
+                        android:layout_centerHorizontal="true"
+                        android:layout_toRightOf="@+id/logo"
+                        android:fontFamily="sans-serif-condensed-light"
+                        android:text=" Online"
+                        android:textColor="#fff"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="482dp"
+            android:layout_below="@+id/first"
+            android:layout_marginTop="18dp">
+
+            <RelativeLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/be"
+                    android:layout_marginStart="30dp"
+                    android:textSize="40sp"
+                    android:textColor="#fff"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Be ready "
+                    android:layout_marginLeft="20dp" />
+                <TextView
+                    android:id="@+id/ready"
+                    android:layout_below="@+id/be"
+                    android:textColor="#554834"
+                    android:textAlignment="center"
+                    android:textSize="26sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="to be "/>
+                <TextView
+                    android:layout_below="@+id/ready"
+                    android:layout_marginRight="30dp"
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="textEnd"
+                    android:layout_marginLeft="20dp"
+                    android:text="Motivated! "
+                    android:textColor="#fff"
+                    android:textSize="40sp"
+                    android:gravity="end" />
+                <LinearLayout
+                    android:layout_below="@+id/textView2"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+
+                        android:id="@+id/login"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="150dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="@drawable/start_backgrounds"
+                        android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
+                        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
+                        android:text="LOGIN"
+                        android:textColor="#fff"
+                        />
+
+                    <Button
+                        android:id="@+id/register"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/login"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="@drawable/start_backgrounds"
+                        android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
+                        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
+                        android:text="Register"
+                        android:textColor="#fff"
+                        android:textColorHighlight="@color/colorPrimaryDark" />
+                </LinearLayout>
+            </RelativeLayout>
+        </RelativeLayout>
+    </RelativeLayout>
+</RelativeLayout>
