--- a/app/src/main/res/layout/activity_view_feedbacks.xml
+++ b/app/src/main/res/layout/activity_view_feedbacks.xml
@@ -15,24 +15,28 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
+            android:textAlignment="center"
+            app:titleTextColor="#FF5722"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/bar_layout"
+            android:layout_alignLeft="@+id/bar_layout"
             android:layout_alignTop="@+id/bar_layout"
-            android:background="@color/colorPrimaryDark"
-            android:textAlignment="center"
+            android:background="#fff"
             android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/MenuStyle"
-            android:layout_alignLeft="@+id/bar_layout">
-
+            app:popupTheme="@style/MenuStyle">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_back_black_24dp"/>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:layout_below="@+id/bar_layout"
-        android:padding="10dp"
+        android:padding="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <android.support.v7.widget.CardView
